--- a/stylesheetfood.css
+++ b/stylesheetfood.css
@@ -12,12 +12,11 @@
 
 @font-face {
     font-family: "shrikhandregular";
-    src: url("/police/shrikhand-regular-webfont.eot");
-    src: url("/police/shrikhand-regular-webfont.eot?#iefix") format("embedded-opentype"),
-        url("/police/shrikhand-regular-webfont.woff2") format("woff2"),
-        url("shrikhand-regular-webfont.woff") format("woff"),
-        url("/police/shrikhand-regular-webfont.ttf") format("truetype"),
-        url("/police/shrikhand-regular-webfont.svg#shrikhandregular") format("svg");
+    src: url("shrikhand-regular-webfont.eot");
+    src: url("shrikhand-regular-webfont.eot?#iefix") format("embedded-opentype"),
+        url("shrikhand-regular-webfont.woff2") format("woff2"), url("shrikhand-regular-webfont.woff") format("woff"),
+        url("shrikhand-regular-webfont.ttf") format("truetype"),
+        url("shrikhand-regular-webfont.svg#shrikhandregular") format("svg");
     font-weight: normal;
     font-style: normal;
 }
