--- a/enchanted-stylesheet.css
+++ b/enchanted-stylesheet.css
@@ -44,7 +44,8 @@ body {
 
 .pic_french {
     object-fit: cover;
-    max-width: 100%;
+    width: 100%;
+    height: 500px;
 }
 
 /*header*/
@@ -579,7 +580,6 @@ a:visited {
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
     animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-plate;
-
     transform: translateY(10px);
     transition: ease;
     position: relative;
@@ -994,7 +994,7 @@ a:visited {
     border-radius: 30px;
     width: 50%;
     height: 51px;
-    box-shadow: 5px 7px 11px 5px lightgrey;
+    box-shadow: 5px 7px 11px 5px grey;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1049,7 +1049,6 @@ ul li {
     justify-content: space-between;
 }
 .food__contact:link {
-    display: contents;
     color: white;
     text-decoration: none;
     line-height: 2;
