--- a/menu-stylesheet.css
+++ b/menu-stylesheet.css
@@ -917,7 +917,7 @@ a:visited {
     border-radius: 30px;
     width: 50%;
     height: 51px;
-    box-shadow: 5px 7px 11px 5px lightgrey;
+    box-shadow: 5px 7px 11px 5px grey;
     display: flex;
     justify-content: center;
     align-items: center;
